--- a/public/css/global.css
+++ b/public/css/global.css
@@ -6,6 +6,7 @@
 body{
   margin: 0;
   font-family: 'Exo 2', sans-serif;
+  background-color: yellow;
 }
 
 .scotch_music{
@@ -81,34 +82,7 @@ body{
   outline: none;
 }
 
-.progress{
-  text-align: center;
-  margin-top: 100px;
-    color: white;
-}
 
-.progress progress[value] {
-  /* Reset the default appearance */
-  -webkit-appearance: none;
-   appearance: none;
-
-  width: 390px;
-  height: 20px;
-  margin-left: 4px;
-  margin-right: 4px;
-}
-
-.progress progress[value]::-webkit-progress-bar {
-  background-color: #eee;
-  border-radius: 2px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
-}
-
-.progress progress[value]::-webkit-progress-value {
-    background-color: rgb(243, 139, 114);
-    border-radius: 2px;
-    background-size: 35px 20px, 100% 100%, 100% 100%;
-}
 
 .footer{
   color: white;
@@ -129,4 +103,12 @@ body{
 .footer .soundcloud{
   height: 25px;
   width: auto;
+}
+
+.music-progress-bar-wrapper{
+  height:50px;
+  margin:20px;
+}
+.music-progress-bar{
+  background-color: rgb(243, 139, 114)!important;
 }
