--- a/public/css/global.css
+++ b/public/css/global.css
@@ -6,7 +6,6 @@
 body{
   margin: 0;
   font-family: 'Exo 2', sans-serif;
-  background-color: yellow;
 }
 
 .scotch_music{
@@ -15,6 +14,7 @@ body{
 
 .search div, .search input {
   width: 100%;
+  z-index: 100;
 }
 
 .search input {
