--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,19 +84,24 @@
 
 .row-bottom{
   padding:5px 15px;
+  display:flex;
+  display:-webkit-flex;
+  align-items: center;
+  color:#E5E5E5;
+  height:3em;
 }
 
 .player-buttons{
-  display:inline-block;
-  line-height:1.5em;
-  vertical-align: middle;
-  padding-top:3px;
+  font-size: 1.5em;
+}
+
+.progress-time{
+  font-size: 1.4em;
+  margin-left:15px;
 }
 
 .player-btn{
-    font-size:20px;
     background:none;
-    color: #E5E5E5;
     border:none;
 }
 
@@ -104,11 +109,4 @@
   color:#2582BE;
 }
 
-.progress-time{
-  font-size:18px;
-  color:#E5E5E5;
-  display: inline-block;
-  line-height:1.5em;
-  vertical-align: middle;
-  margin-left: 15px;
-}
+
