Use flexbox for detail view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,9 +26,20 @@
 }
 
 
-.details{
-  width:100%;
+.detail{
   padding:15px;
+  display: flex;
+  display: -webkit-flex;
+  width:100%;
+}
+
+.detail-left{
+  flex:1;
+}
+
+.detail-right{
+  margin-left:15px;
+  flex:2;
 }
 
 .detail-right .title{
@@ -71,16 +82,6 @@
 .progress-bar-container .progress-bar-download{
   background: rgba(255,255,255,.4);
 }
-
-.detail-left{
-  width:250px;
-  height:250px;
-}
-
-.detail-right h3{
-
-}
-
 
 .row-bottom{
   padding:5px 15px;
