--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,14 +109,15 @@
 }
 
 .volume-button {
-    min-width:35px;
+    min-width: 35px;
     position: relative;
 }
 
 .sound-slider {
-    height: 100px;
+    height: 120px;
     margin: 0px;
     position: absolute;
-    top: -100px;
-    left: 6px;
+    top: -110px;
+    left: -8px;
+    padding: 15px;
 }
